external-crates/move/crates/move-compiler/tests/move_check/expansion/no_address.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/no_address.move:1:8
  │
1 │ module M {}
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''
